炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


//对象类型决定功能
//对象样式决定外观

/// @defgroup groupObjectType 接口句柄类型
/// @ingroup macroDefine
/// @{
/// 炫彩对象类型
enum XC_OBJECT_TYPE  ///<炫彩对象类型
{
	XC_ERROR = -1,   ///<错误类型
	XC_NOTHING = 0,
	XC_WINDOW = 1,    ///<窗口
	XC_MODALWINDOW = 2,    ///<模态窗口
	XC_FRAMEWND = 3,    ///<框架窗口
	XC_FLOATWND = 4,    ///<浮动窗口
	XC_COMBOBOXWINDOW = 11,   //comboBoxWindow_        组合框弹出下拉列表窗口
	XC_POPUPMENUWINDOW = 12,  //popupMenuWindow_       弹出菜单主窗口
	XC_POPUPMENUCHILDWINDOW = 13,   //popupMenuChildWindow_  弹出菜单子窗口
	XC_OBJECT_UI = 19,   ///<...
	XC_WIDGET_UI = 20,
	//元素
	XC_ELE = 21,   ///<基础元素
	XC_ELE_LAYOUT = 53,   ///<布局元素
	XC_BUTTON = 22,   ///<按钮
	XC_RICHEDIT = 23,   ///<富文本编辑框
	XC_COMBOBOX = 24,   ///<下拉组合框元素
	XC_SCROLLBAR = 25,   ///<滚动条元素
	XC_SCROLLVIEW = 26,   ///<滚动视图元素
	XC_LIST = 27,   ///<列表元素
	XC_LISTBOX = 28,   ///<列表框元素
	XC_LISTVIEW = 29,   ///<列表视图,大图标
	XC_TREE = 30,   ///<树元素
	XC_MENUBAR = 31,   ///<菜单条
	XC_SLIDERBAR = 32,   ///<滑动条
	XC_PROGRESSBAR = 33,   ///<进度条
	XC_TOOLBAR = 34,   ///<工具条
	XC_MONTHCAL = 35,   ///<月历元素
	XC_DATETIME = 36,   ///<时间元素
	XC_PROPERTYGRID = 37,   ///<属性网格
	XC_RICHEDIT_COLOR = 38,   ///<颜色选择元素
	XC_RICHEDIT_SET = 39,   ///<...
	XC_TABBAR = 40,   ///<tab条
	XC_TEXTLINK = 41,   ///<文本链接按钮

	XC_PANE = 42,   ///<布局窗格
	XC_PANE_SPLIT = 43,   ///<布局窗格拖动分割条
	XC_MENUBAR_BUTTON = 44,   ///<菜单条上的按钮
							  //	XC_TOOLBAR_BUTTON       =45,   ///<工具条上按钮
							  //	XC_PROPERTYPAGE_LABEL   =46,   ///<属性页标签按钮
							  //	XC_PIER                 =47,   ///<窗格停靠码头
							  //	XC_BUTTON_MENU          =48,   ///<弹出菜单按钮
							  //	XC_VIRTUAL_ELE          =49,   ///<虚拟元素
							  XC_RICHEDIT_FILE = 50,   ///<RichEditFile 文件选择编辑框
							  XC_RICHEDIT_FOLDER = 51,   ///<RichEditFolder  文件夹选择编辑框
							  XC_LIST_HEADER = 52,   ///<列表头元素

							  XC_SHAPE = 61,    ///<形状对象
							  XC_SHAPE_TEXT = 62,    ///<形状对象-文本
							  XC_SHAPE_PICTURE = 63,    ///<形状对象-图片
							  XC_SHAPE_RECT = 64,    ///<形状对象-矩形
							  XC_SHAPE_ELLIPSE = 65,    ///<形状对象-圆
							  XC_SHAPE_LINE = 66,    ///<形状对象-直线
							  XC_SHAPE_GROUPBOX = 67,    ///<形状对象-组框
							  XC_SHAPE_GIF = 68,    ///<形状对象-GIF

													//其他类型
													XC_MENU = 81,   ///<弹出菜单
													XC_IMAGE = 82,         ///<图片
													XC_IMAGE_TEXTURE = XC_IMAGE,   ///<图片纹理,图片源,图片素材
													XC_HDRAW = 83,   ///<绘图操作
													XC_FONT = 84,   ///<炫彩字体
													XC_FLASH = 85,   ///<flash   
													XC_PANE_CELL = 86,   ///<...
													XC_WEB = 87,   ///<...
													XC_IMAGE_FRAME = 88,   ///<图片帧,指定图片的渲染属性

													XC_LAYOUT_OBJECT = 101,   ///<布局对象LayoutObject
													XC_ADAPTER = 102,   ///<...
													XC_ADAPTER_TABLE = 103,   ///<数据适配器AdapterTable
													XC_ADAPTER_TREE = 104,   ///<数据适配器AdapterTree
													XC_ADAPTER_LISTVIEW = 105,   ///<数据适配器AdapterListView
													XC_ADAPTER_MAP = 106,   ///<数据适配器AdapterMap

													XC_BKINFOM = 116, //背景管理器

																	  //无实体对象,只是用来判断布局
																	  XC_LAYOUT_LISTVIEW = 111,
																	  XC_LAYOUT_LIST = 112,
																	  XC_LAYOUT_OBJECT_GROUP = 113,
																	  XC_LAYOUT_OBJECT_ITEM = 114,
																	  XC_LAYOUT_PANEL = 115,

																	  //无实体对象,只是用来判断类型
																	  XC_LIST_ITEM = 121,     //列表项模板 list_item
																	  XC_LISTVIEW_GROUP = 122,
																	  XC_LISTVIEW_ITEM = 123,
																	  //XC_BUTTON_EX,
};

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


///@}

/// @defgroup groupLayoutSize 布局大小类型
/// @ingroup macroDefine
/// @{
enum  layout_size_type_
{
	layout_size_type_fixed = 0,   ///<指定大小
	layout_size_type_fill,      ///<fill 填充父
	layout_size_type_auto,      ///<auto 自动大小,根据内容计算大小
	layout_size_type_weight,    ///<weight 比例,按照比例分配剩余空间
	layout_size_type_disable,   ///<disable 不使用
};


///@}

///@defgroup  GroupZOrder    Z序位置
///@ingroup  macroDefine
///@{
enum zorder_
{
	zorder_top,    ///<最上面
	zorder_bottom, ///<最下面
	zorder_before, ///<指定目标下面
	zorder_after,  ///<指定目标上面
};


///@}

///@defgroup Group_adjustLayout    调整布局标识位
///@ingroup  macroDefine
///@{
enum xc_adjustLayout_
{
	xc_adjustLayout_no = 0x00,  ///<不调整布局
	xc_adjustLayout_all = 0x01,  ///<强制调整自身和子对象布局.
	xc_adjustLayout_self = 0x02,  ///<只调整自身布局,不调整子对象布局.
};

																							  /////////////////////////////////////////////////////////
																							  //////////////定义结构体///////////////////////////////////
																							  /////////////////////////////////////////////////////////
struct BorderSize_i  //4条边的大小
{
	int  leftSize;
	int  topSize;
	int  rightSize;
	int  bottomSize;
};


//字体信息
struct  xc_font_info_i
{
	int   nSize;                 ///<字体大小,单位(pt,磅).
	int   nStyle;                ///<字体样式 xc_fontStyle_i
	wchar_t  name[LF_FACESIZE];  ///<字体名称
};


enum xc_fontStyle_i
{
	xc_fontStyle_regular = 0,  ///<正常
	xc_fontStyle_bold = 1,  ///<粗体
	xc_fontStyle_italic = 2,  ///<斜体
	xc_fontStyle_boldItalic = 3,  ///<粗斜体
	xc_fontStyle_underline = 4,  ///<下划线
	xc_fontStyle_strikeout = 8   ///<删除线
};
XC_API int  WINAPI XEle_SendEvent(HELE hEle, HELE hEventEle, int nEvent, WPARAM wParam, LPARAM lParam);

XC_API BOOL WINAPI XEle_PostEvent(HELE hEle, HELE hEventEle, int nEvent, WPARAM wParam, LPARAM lParam);

XC_API BOOL WINAPI XEle_IsShow(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnable(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnableFocus(HELE hEle);

XC_API BOOL WINAPI XEle_IsDrawFocus(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnableEvent_XE_PAINT_END(HELE hEle);

XC_API BOOL WINAPI XEle_IsMouseThrough(HELE hEle);

XC_API BOOL WINAPI XEle_IsBkTransparent(HELE hEle);

XC_API BOOL WINAPI XEle_IsKeyTab(HELE hEle);

XC_API BOOL WINAPI XEle_IsSwitchFocus(HELE hEle);

XC_API BOOL WINAPI XEle_IsEnable_XE_MOUSEWHEEL(HELE hEle);

XC_API void WINAPI XEle_Enable(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableFocus(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableDrawFocus(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableDrawBorder(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableEvent_XE_PAINT_END(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableBkTransparent(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableMouseThrough(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableKeyTab(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableSwitchFocus(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_EnableEvent_XE_MOUSEWHEEL(HELE hEle, BOOL bEnable);

XC_API int  WINAPI XEle_SetRect(HELE hEle, RECT *pRect, BOOL bRedraw = FALSE, int nFlags = xc_adjustLayout_all);

XC_API int  WINAPI XEle_SetRectEx(HELE hEle, int x, int y, int cx, int cy, BOOL bRedraw = FALSE, int nFlags = xc_adjustLayout_all);

XC_API int  WINAPI XEle_SetRectLogic(HELE hEle, RECT *pRect, BOOL bRedraw = FALSE, int nFlags = xc_adjustLayout_all); //逻辑模式坐标
XC_API void WINAPI XEle_GetRect(HELE hEle, RECT *pRect);   //相对与父坐标,人眼观察模式
XC_API void WINAPI XEle_GetRectLogic(HELE hEle, RECT *pRect); //相对与父坐标,逻辑模式
XC_API void WINAPI XEle_GetClientRect(HELE hEle, RECT *pRect);  //左上角为0，0坐标
XC_API void WINAPI XEle_GetWndClientRect(HELE hEle, out_ RECT *pRect);

XC_API int  WINAPI XEle_GetWidth(HELE hEle);

XC_API int  WINAPI XEle_GetHeight(HELE hEle);

XC_API void WINAPI XEle_RectWndClientToEleClient(HELE hEle, in_out_ RECT *pRect);

XC_API void WINAPI XEle_PointWndClientToEleClient(HELE hEle, in_out_ POINT *pPt);

XC_API void WINAPI XEle_RectClientToWndClient(HELE hEle, in_out_ RECT *pRect);

XC_API void WINAPI XEle_PointClientToWndClient(HELE hEle, in_out_ POINT *pPt);
XC_API void WINAPI XEle_RemoveEle(HELE hEle);

XC_API BOOL WINAPI XEle_SetZOrder(HELE hEle, int index);

XC_API BOOL WINAPI XEle_SetZOrderEx(HELE hEle, HELE hDestEle, zorder_ nType);

XC_API int  WINAPI XEle_GetZOrder(HELE hEle);

XC_API BOOL WINAPI XEle_SetTopmost(HELE hEle, BOOL bTopmost);

XC_API void WINAPI XEle_EnableCSS(HELE hEle, BOOL bEnable);

XC_API void WINAPI XEle_SetCssName(HELE hEle, const wchar_t *pName);

XC_API const wchar_t* WINAPI XEle_GetCssName(HELE hEle);

XC_API void WINAPI XEle_ShowEle(HELE hEle, BOOL bShow);

XC_API XC_OBJECT_TYPE WINAPI XEle_GetType(HELE hEle);

XC_API HWND WINAPI XEle_GetHWND(HELE hEle);

XC_API HWINDOW WINAPI XEle_GetHWINDOW(HELE hEle);

XC_API void WINAPI XEle_SetCursor(HELE hEle, HCURSOR hCursor);

XC_API HCURSOR WINAPI XEle_GetCursor(HELE hEle);

XC_API void WINAPI XEle_SetID(HELE hEle, int nID);

XC_API int  WINAPI XEle_GetID(HELE hEle);

XC_API void WINAPI XEle_SetUID(HELE hEle, int nUID);

XC_API int  WINAPI XEle_GetUID(HELE hEle);

XC_API HELE WINAPI XEle_GetParentEle(HELE hEle);

XC_API HXCGUI WINAPI XEle_GetParent(HELE hEle);

XC_API void WINAPI XEle_SetTextColor(HELE hEle, COLORREF color, BYTE alpha = 255);

XC_API COLORREF WINAPI XEle_GetTextColor(HELE hEle);

XC_API void WINAPI XEle_SetFocusBorderColor(HELE hEle, COLORREF color, BYTE alpha = 255);

XC_API COLORREF WINAPI XEle_GetFocusBorderColor(HELE hEle);

XC_API void WINAPI XEle_SetFont(HELE hEle, HFONTX hFontx);

XC_API HFONTX WINAPI XEle_GetFont(HELE hEle);

XC_API void WINAPI XEle_SetAlpha(HELE hEle, BYTE alpha);

XC_API int  WINAPI XEle_GetChildCount(HELE hEle);

XC_API HXCGUI WINAPI XEle_GetChildByIndex(HELE hEle, int index);

XC_API HXCGUI WINAPI XEle_GetChildByID(HELE hEle, int nID);

XC_API void WINAPI XEle_SetBorderSize(HELE hEle, int left, int top, int right, int bottom);

XC_API void WINAPI XEle_GetBorderSize(HELE hEle, BorderSize_i* pBorder);

XC_API void WINAPI XEle_SetPadding(HELE hEle, int left, int top, int right, int bottom);

XC_API void WINAPI XEle_GetPadding(HELE hEle, PaddingSize_i* pPadding);

XC_API HELE WINAPI XEle_HitChildEle(HELE hEle, in_ POINT  *pPt);

XC_API void WINAPI XEle_SetUserData(HELE hEle, int nData);

XC_API int  WINAPI XEle_GetUserData(HELE hEle);

XC_API void WINAPI XEle_GetContentSize(HELE hEle, out_ SIZE* pSize);

XC_API void WINAPI XEle_SetCapture(HELE hEle, BOOL b);

XC_API void WINAPI XEle_SetLayoutWidth(HELE hEle, layout_size_type_ nType, int nWidth);

XC_API void WINAPI XEle_SetLayoutHeight(HELE hEle, layout_size_type_ nType, int nHeight);

XC_API void WINAPI XEle_GetLayoutWidth(HELE hEle, out_ layout_size_type_ *pType, out_ int *pWidth);

XC_API void WINAPI XEle_GetLayoutHeight(HELE hEle, out_ layout_size_type_ *pType, out_ int *pHeight);

XC_API void WINAPI XEle_RedrawEle(HELE hEle, BOOL bImmediate = FALSE);

XC_API void WINAPI XEle_RedrawRect(HELE hEle, RECT *pRect, BOOL bImmediate = FALSE);

XC_API void WINAPI XEle_Destroy(HELE hEle);  //销毁
XC_API void WINAPI XEle_AddBkBorder(HELE hEle, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XEle_AddBkFill(HELE hEle, COLORREF color, BYTE alpha);

XC_API void WINAPI XEle_AddBkImage(HELE hEle, HIMAGE hImage);

XC_API int  WINAPI XEle_GetBkInfoCount(HELE hEle);

XC_API void WINAPI XEle_ClearBkInfo(HELE hEle);

XC_API HBKM WINAPI XEle_GetBkManager(HELE hEle);

XC_API int  WINAPI XEle_GetStateFlags(HELE hEle); //获取组合状态
XC_API BOOL WINAPI XEle_DrawFocus(HELE hEle, HDRAW hDraw, RECT* pRect);

XC_API void WINAPI XEle_DrawEle(HELE hEle, HDRAW hDraw);

XC_API void WINAPI XEle_EnableTransparentChannel(HELE hEle, BOOL bEnable);

XC_API BOOL WINAPI XEle_SetXCTimer(HELE hEle, UINT nIDEvent, UINT uElapse);

XC_API BOOL WINAPI XEle_KillXCTimer(HELE hEle, UINT nIDEvent);

XC_API void WINAPI XEle_SetToolTip(HELE hEle, const wchar_t* pText);

XC_API void WINAPI XEle_GetToolTip(HELE hEle, out_ wchar_t  *pOut, int nOutLen);

XC_API void WINAPI XEle_PopupToolTip(HELE hEle, int x, int y);

XC_API void WINAPI XEle_AdjustLayout(HELE hEle);

XC_API HFONTX WINAPI XFont_Create(int size);//创建字体
XC_API HFONTX WINAPI XFont_Create2(const wchar_t *pName = L"宋体", int size = 12, int style = xc_fontStyle_regular);

XC_API HFONTX WINAPI XFont_Create3(xc_font_info_i*  pInfo);

XC_API HFONTX WINAPI XFont_CreateEx(LOGFONTW *pFontInfo);

XC_API HFONTX WINAPI XFont_CreateFromHFONT(HFONT hFont);

XC_API HFONTX WINAPI XFont_CreateFromFont(void*  pFont);

XC_API HFONTX WINAPI XFont_CreateFromFile(const wchar_t*  pFontFile, int size = 12, int style = xc_fontStyle_regular);

XC_API void   WINAPI XFont_EnableAutoDestroy(HFONTX hFontX, BOOL bEnable);

XC_API void* WINAPI XFont_GetFont(HFONTX hFontX);

XC_API void  WINAPI XFont_GetFontInfo(HFONTX hFontX, out_ xc_font_info_i*  pInfo);

XC_API void  WINAPI XFont_AddRef(HFONTX hFontX);   //增加引用计数
XC_API void  WINAPI XFont_Release(HFONTX hFontX);  //释放引用计数
XC_API int   WINAPI XFont_GetRefCount(HFONTX hFontX);

XC_API void  WINAPI XFont_Destroy(HFONTX hFontX);  //销毁字体