炫彩编程助手/Data/DemoMgr/Delphi/Lib/XCGUI.pas

function XEle_SendEvent (hEle:Integer;hEventEle:Integer;nEvent:Integer;wParam:Integer;lParam:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_PostEvent (hEle:Integer;hEventEle:Integer;nEvent:Integer;wParam:Integer;lParam:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsShow (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnable (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnableFocus (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsDrawFocus (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnableEvent_XE_PAINT_END (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsMouseThrough (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsBkTransparent (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsKeyTab (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsSwitchFocus (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsEnable_XE_MOUSEWHEEL (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_IsInScrollView (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_Enable (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableFocus (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableDrawFocus (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableDrawBorder (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableEvent_XE_PAINT_END (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableBkTransparent (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableMouseThrough (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableKeyTab (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableSwitchFocus (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableEvent_XE_MOUSEWHEEL (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableInScrollView (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XEle_SetRect (hEle:Integer;pRect:TRECT;bRedraw:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetRectEx (hEle:Integer;x:Integer;y:Integer;cx:Integer;cy:Integer;bRedraw:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetRectLogic (hEle:Integer;pRect:TRECT;bRedraw:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_GetRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_GetRectLogic (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_GetClientRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_GetWndClientRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
function XEle_GetWidth (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_RectWndClientToEleClient (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_PointWndClientToEleClient (hEle:Integer;pPt:TPOINT);stdcall;far; external 'xcgui.dll';
procedure XEle_RectClientToWndClient (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XEle_PointClientToWndClient (hEle:Integer;pPt:TPOINT);stdcall;far; external 'xcgui.dll';
function XEle_AddEle (hEle:Integer;hChildEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_InsertEle (hEle:Integer;hChildEle:Integer;index:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_RemoveEle (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XEle_AddShape (hEle:Integer;hShape:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetZOrder (hEle:Integer;index:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_SetZOrderEx (hEle:Integer;hDestEle:Integer;nType:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_GetZOrder (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_SetTopmost (hEle:Integer;bTopmost:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_EnableCSS (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_SetCssName (hEle:Integer;pName:PWideChar);stdcall;far; external 'xcgui.dll';
function XEle_GetCssName (hEle:Integer) : PWideChar;stdcall;far; external 'xcgui.dll';
procedure XEle_ShowEle (hEle:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
function XEle_GetType (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetHWND (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetHWINDOW (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetCursor (hEle:Integer;hCursor:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetCursor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetID (hEle:Integer;nID:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetID (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetUID (hEle:Integer;nUID:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetUID (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetParentEle (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetParent (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetTextColor (hEle:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XEle_GetTextColor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetFocusBorderColor (hEle:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XEle_GetFocusBorderColor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetFont (hEle:Integer;hFontx:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetFont (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetAlpha (hEle:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XEle_GetChildCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildByIndex (hEle:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildByID (hEle:Integer;nID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildShapeCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildShapeByIndex (hEle:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetBorderSize (hEle:Integer;left:Integer;top:Integer;right:Integer;bottom:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_GetBorderSize (hEle:Integer;pBorder:TBorderSize_i);stdcall;far; external 'xcgui.dll';
procedure XEle_SetPadding (hEle:Integer;left:Integer;top:Integer;right:Integer;bottom:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_GetPadding (hEle:Integer;pPadding:TPaddingSize_i);stdcall;far; external 'xcgui.dll';
function XEle_HitChildEle (hEle:Integer;pPt:TPOINT) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_BindLayoutObject (hEle:Integer;hLayout:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetLayoutObject (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetParentLayoutObject (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetUserData (hEle:Integer;nData:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetUserData (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_GetContentSize (hEle:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
procedure XEle_SetCapture (hEle:Integer;b:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_SetLayoutWidth (hEle:Integer;nType:Integer;nWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_SetLayoutHeight (hEle:Integer;nType:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_GetLayoutWidth (hEle:Integer;pType:Integer;pWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_GetLayoutHeight (hEle:Integer;pType:Integer;pHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_RedrawEle (hEle:Integer;bImmediate:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_RedrawRect (hEle:Integer;pRect:TRECT;bImmediate:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_Destroy (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_AddBkBorder (hEle:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_AddBkFill (hEle:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XEle_AddBkImage (hEle:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_ClearBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetBkManager (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetStateFlags (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_DrawFocus (hEle:Integer;hDraw:Integer;pRect:TRECT) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_DrawEle (hEle:Integer;hDraw:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableTransparentChannel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XEle_SetXCTimer (hEle:Integer;nIDEvent:Integer;uElapse:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XEle_KillXCTimer (hEle:Integer;nIDEvent:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_SetToolTip (hEle:Integer;pText:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XEle_GetToolTip (hEle:Integer;pOut:PWideChar;nOutLen:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_PopupToolTip (hEle:Integer;x:Integer;y:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_AdjustLayoutObject (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_AdjustLayout (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XEle_RegEventTest (nEvent:Integer;pParamType:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XFont_Create (size:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_Create2 (pName:PWideChar;size:Integer;style:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_Create3 (pInfo:Txc_font_info_i) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_CreateEx (pFontInfo:TLOGFONTW) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_CreateFromHFONT (hFont:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_CreateFromFont (pFont:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_CreateFromFile (pFontFile:PWideChar;size:Integer;style:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XFont_EnableAutoDestroy (hFontX:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XFont_GetFont (hFontX:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XFont_GetFontInfo (hFontX:Integer;pInfo:Txc_font_info_i);stdcall;far; external 'xcgui.dll';
procedure XFont_AddRef (hFontX:Integer);stdcall;far; external 'xcgui.dll';
procedure XFont_Release (hFontX:Integer);stdcall;far; external 'xcgui.dll';
function XFont_GetRefCount (hFontX:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XFont_Destroy (hFontX:Integer);stdcall;far; external 'xcgui.dll';
